--- a/CrazyEightsProject/CrazyEights/src/main/res/values/attrs.xml
+++ b/CrazyEightsProject/CrazyEights/src/main/res/values/attrs.xml
@@ -5,8 +5,10 @@
          ?android:attr/buttonBarStyle is new as of API 11 so this is
          necessary to support previous API levels. -->
     <declare-styleable name="ButtonBarContainerTheme">
+    <!-- DESHABILITADO POR MI PARA ELIMINAR ERRORES
         <attr name="buttonBarStyle" format="reference" />
         <attr name="buttonBarButtonStyle" format="reference" />
+    -->
     </declare-styleable>
 
 </resources>
